@@ -27,6 +27,10 @@ dnl Check for XFree86 source
 AC_WCM_CHECK_XFREE86SOURCE
 AC_WCM_CHECK_XFREE86V3SOURCE
 
+dnl Check for GTK and XLib
+AC_WCM_CHECK_GTK
+AC_WCM_CHECK_XLIB
+
 dnl Check for wacom build
 WCM_OPTION_WACOM=no
 AC_ARG_ENABLE(wacom,
@@ -52,6 +56,16 @@ AC_ARG_ENABLE(wacdump,
 if test "$enable_wacdump" != "no"; then
 	WCM_OPTION_WACDUMP=yes
 	WCM_PROGS="$WCM_PROGS wacdump"
+fi
+
+dnl Check for xidump build
+WCM_OPTION_XIDUMP=no
+AC_ARG_ENABLE(xidump,
+[  --enable-xidump   Enable building xidump               default=yes],
+	, enable_xidump=$WCM_XIDUMP_DEFAULT)
+if test "$enable_xidump" != "no"; then
+	WCM_OPTION_XIDUMP=yes
+	WCM_PROGS="$WCM_PROGS xidump"
 fi
 
 dnl Check for hid build
@@ -244,10 +258,12 @@ echo "            XFree86 - $WCM_ENV_XF86"
 if test -n "$WCM_ENV_XF86V3"; then
 	echo "          XFree86v3 - $WCM_ENV_XF86V3"
 fi
+echo "                GTK - $WCM_ENV_GTK"
 echo ""
 echo "  BUILD OPTIONS:"
 echo "            wacom.o - $WCM_OPTION_WACOM"
 echo "            wacdump - $WCM_OPTION_WACDUMP $WCM_PATCH_WACDUMP"
+echo "             xidump - $WCM_OPTION_XIDUMP"
 echo "              hid.o - $WCM_OPTION_HID $WCM_PATCH_HID"
 echo "         usbmouse.o - $WCM_OPTION_USBMOUSE"
 echo "        wacom_drv.o - $WCM_OPTION_WACOMDRV $WCM_PATCH_WACOMDRV"
